Fix quiz overlapping container in firefox

--- a/widgets/start-session-and-quiz/edx/default/dev/start-session-and-quiz-style.css
+++ b/widgets/start-session-and-quiz/edx/default/dev/start-session-and-quiz-style.css
@@ -223,7 +223,7 @@
   border-radius: 5px;
   height: 100%;
   width: 100%;
-  flex-grow: 1;
+  min-height: 0px;
   overflow: none;
   box-shadow: 0 2px 7px rgba(17,18,18,0.21);
 }
